sdk/avs/arm-avs/samples/v3/typescript/README.md
# client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for in some common scenarios.

| **File Name**                                                                               | **Description**                                                                                                                                                                                                                                |
| ------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [addonsCreateOrUpdateSample.ts][addonscreateorupdatesample]                                 | Create or update a addon in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Addons_CreateOrUpdate_ArcReg.json                                                               |
| [addonsDeleteSample.ts][addonsdeletesample]                                                 | Delete a addon in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Addons_Delete.json                                                                                        |
| [addonsGetSample.ts][addonsgetsample]                                                       | Get an addon by name in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Addons_Get_ArcReg.json                                                                              |
| [addonsListSample.ts][addonslistsample]                                                     | List addons in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Addons_List.json                                                                                             |
| [authorizationsCreateOrUpdateSample.ts][authorizationscreateorupdatesample]                 | Create or update an ExpressRoute Circuit Authorization in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Authorizations_CreateOrUpdate.json                                |
| [authorizationsDeleteSample.ts][authorizationsdeletesample]                                 | Delete an ExpressRoute Circuit Authorization in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Authorizations_Delete.json                                                  |
| [authorizationsGetSample.ts][authorizationsgetsample]                                       | Get an ExpressRoute Circuit Authorization by name in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Authorizations_Get.json                                                |
| [authorizationsListSample.ts][authorizationslistsample]                                     | List ExpressRoute Circuit Authorizations in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Authorizations_List.json                                                        |
| [cloudLinksCreateOrUpdateSample.ts][cloudlinkscreateorupdatesample]                         | Create or update a cloud link in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/CloudLinks_CreateOrUpdate.json                                                             |
| [cloudLinksDeleteSample.ts][cloudlinksdeletesample]                                         | Delete a cloud link in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/CloudLinks_Delete.json                                                                               |
| [cloudLinksGetSample.ts][cloudlinksgetsample]                                               | Get an cloud link by name in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/CloudLinks_Get.json                                                                            |
| [cloudLinksListSample.ts][cloudlinkslistsample]                                             | List cloud link in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/CloudLinks_List.json                                                                                     |
| [clustersCreateOrUpdateSample.ts][clusterscreateorupdatesample]                             | Create or update a cluster in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Clusters_CreateOrUpdate.json                                                                  |
| [clustersDeleteSample.ts][clustersdeletesample]                                             | Delete a cluster in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Clusters_Delete.json                                                                                    |
| [clustersGetSample.ts][clustersgetsample]                                                   | Get a cluster by name in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Clusters_Get.json                                                                                  |
| [clustersListSample.ts][clusterslistsample]                                                 | List clusters in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Clusters_List.json                                                                                         |
| [clustersListZonesSample.ts][clusterslistzonessample]                                       | List hosts by zone in a cluster x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Clusters_ListZones.json                                                                                     |
| [clustersUpdateSample.ts][clustersupdatesample]                                             | Update a cluster in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Clusters_Update.json                                                                                    |
| [datastoresCreateOrUpdateSample.ts][datastorescreateorupdatesample]                         | Create or update a datastore in a private cloud cluster x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Datastores_CreateOrUpdate.json                                                      |
| [datastoresDeleteSample.ts][datastoresdeletesample]                                         | Delete a datastore in a private cloud cluster x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Datastores_Delete.json                                                                        |
| [datastoresGetSample.ts][datastoresgetsample]                                               | Get a datastore in a private cloud cluster x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Datastores_Get.json                                                                              |
| [datastoresListSample.ts][datastoreslistsample]                                             | List datastores in a private cloud cluster x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Datastores_List.json                                                                             |
| [globalReachConnectionsCreateOrUpdateSample.ts][globalreachconnectionscreateorupdatesample] | Create or update a global reach connection in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/GlobalReachConnections_CreateOrUpdate.json                                    |
| [globalReachConnectionsDeleteSample.ts][globalreachconnectionsdeletesample]                 | Delete a global reach connection in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/GlobalReachConnections_Delete.json                                                      |
| [globalReachConnectionsGetSample.ts][globalreachconnectionsgetsample]                       | Get a global reach connection by name in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/GlobalReachConnections_Get.json                                                    |
| [globalReachConnectionsListSample.ts][globalreachconnectionslistsample]                     | List global reach connections in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/GlobalReachConnections_List.json                                                           |
| [hcxEnterpriseSitesCreateOrUpdateSample.ts][hcxenterprisesitescreateorupdatesample]         | Create or update an HCX Enterprise Site in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/HcxEnterpriseSites_CreateOrUpdate.json                                           |
| [hcxEnterpriseSitesDeleteSample.ts][hcxenterprisesitesdeletesample]                         | Delete an HCX Enterprise Site in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/HcxEnterpriseSites_Delete.json                                                             |
| [hcxEnterpriseSitesGetSample.ts][hcxenterprisesitesgetsample]                               | Get an HCX Enterprise Site by name in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/HcxEnterpriseSites_Get.json                                                           |
| [hcxEnterpriseSitesListSample.ts][hcxenterprisesiteslistsample]                             | List HCX Enterprise Sites in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/HcxEnterpriseSites_List.json                                                                   |
| [locationsCheckQuotaAvailabilitySample.ts][locationscheckquotaavailabilitysample]           | Return quota for subscription by region x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Locations_CheckQuotaAvailability.json                                                               |
| [locationsCheckTrialAvailabilitySample.ts][locationschecktrialavailabilitysample]           | Return trial status for subscription by region x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Locations_CheckTrialAvailability.json                                                        |
| [operationsListSample.ts][operationslistsample]                                             | Lists all of the available operations x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/Operations_List.json                                                                                  |
| [placementPoliciesCreateOrUpdateSample.ts][placementpoliciescreateorupdatesample]           | Create or update a placement policy in a private cloud cluster x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/PlacementPolicies_CreateOrUpdate.json                                        |
| [placementPoliciesDeleteSample.ts][placementpoliciesdeletesample]                           | Delete a placement policy in a private cloud cluster x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/PlacementPolicies_Delete.json                                                          |
| [placementPoliciesGetSample.ts][placementpoliciesgetsample]                                 | Get a placement policy by name in a private cloud cluster x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/PlacementPolicies_Get.json                                                        |
| [placementPoliciesListSample.ts][placementpolicieslistsample]                               | List placement policies in a private cloud cluster x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/PlacementPolicies_List.json                                                              |
| [placementPoliciesUpdateSample.ts][placementpoliciesupdatesample]                           | Update a placement policy in a private cloud cluster x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/PlacementPolicies_Update.json                                                          |
| [privateCloudsCreateOrUpdateSample.ts][privatecloudscreateorupdatesample]                   | Create or update a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/PrivateClouds_CreateOrUpdate.json                                                                          |
| [privateCloudsDeleteSample.ts][privatecloudsdeletesample]                                   | Delete a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/PrivateClouds_Delete.json                                                                                            |
| [privateCloudsGetSample.ts][privatecloudsgetsample]                                         | Get a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/PrivateClouds_Get.json                                                                                                  |
| [privateCloudsListAdminCredentialsSample.ts][privatecloudslistadmincredentialssample]       | List the admin credentials for the private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/PrivateClouds_ListAdminCredentials.json                                                    |
| [privateCloudsListInSubscriptionSample.ts][privatecloudslistinsubscriptionsample]           | List private clouds in a subscription x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/PrivateClouds_ListInSubscription.json                                                                 |
| [privateCloudsListSample.ts][privatecloudslistsample]                                       | List private clouds in a resource group x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/PrivateClouds_List.json                                                                             |
| [privateCloudsRotateNsxtPasswordSample.ts][privatecloudsrotatensxtpasswordsample]           | Rotate the NSX-T Manager password x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/PrivateClouds_RotateNsxtPassword.json                                                                     |
| [privateCloudsRotateVcenterPasswordSample.ts][privatecloudsrotatevcenterpasswordsample]     | Rotate the vCenter password x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/PrivateClouds_RotateVcenterPassword.json                                                                        |
| [privateCloudsUpdateSample.ts][privatecloudsupdatesample]                                   | Update a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/PrivateClouds_Update.json                                                                                            |
| [scriptCmdletsGetSample.ts][scriptcmdletsgetsample]                                         | Return information about a script cmdlet resource in a specific package on a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/ScriptCmdlets_Get.json                           |
| [scriptCmdletsListSample.ts][scriptcmdletslistsample]                                       | List script cmdlet resources available for a private cloud to create a script execution resource on a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/ScriptCmdlets_List.json |
| [scriptExecutionsCreateOrUpdateSample.ts][scriptexecutionscreateorupdatesample]             | Create or update a script execution in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/ScriptExecutions_CreateOrUpdate.json                                                 |
| [scriptExecutionsDeleteSample.ts][scriptexecutionsdeletesample]                             | Cancel a ScriptExecution in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/ScriptExecutions_Delete.json                                                                    |
| [scriptExecutionsGetExecutionLogsSample.ts][scriptexecutionsgetexecutionlogssample]         | Return the logs for a script execution resource x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/ScriptExecutions_GetExecutionLogs.json                                                      |
| [scriptExecutionsGetSample.ts][scriptexecutionsgetsample]                                   | Get an script execution by name in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/ScriptExecutions_Get.json                                                                |
| [scriptExecutionsListSample.ts][scriptexecutionslistsample]                                 | List script executions in a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/ScriptExecutions_List.json                                                                        |
| [scriptPackagesGetSample.ts][scriptpackagesgetsample]                                       | Get a script package available to run on a private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/ScriptPackages_Get.json                                                            |
| [scriptPackagesListSample.ts][scriptpackageslistsample]                                     | List script packages available to run on the private cloud x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/ScriptPackages_List.json                                                         |
| [virtualMachinesGetSample.ts][virtualmachinesgetsample]                                     | Get a virtual machine by id in a private cloud cluster x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/VirtualMachines_Get.json                                                             |
| [virtualMachinesListSample.ts][virtualmachineslistsample]                                   | List of virtual machines in a private cloud cluster x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/VirtualMachines_List.json                                                               |
| [virtualMachinesRestrictMovementSample.ts][virtualmachinesrestrictmovementsample]           | Enable or disable DRS-driven VM movement restriction x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/VirtualMachines_RestrictMovement.json                                                  |
| [workloadNetworksCreateDhcpSample.ts][workloadnetworkscreatedhcpsample]                     | Create dhcp by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_CreateDhcpConfigurations.json                                       |
| [workloadNetworksCreateDnsServiceSample.ts][workloadnetworkscreatednsservicesample]         | Create a DNS service by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_CreateDnsServices.json                                     |
| [workloadNetworksCreateDnsZoneSample.ts][workloadnetworkscreatednszonesample]               | Create a DNS zone by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_CreateDnsZones.json                                           |
| [workloadNetworksCreatePortMirroringSample.ts][workloadnetworkscreateportmirroringsample]   | Create a port mirroring profile by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_CreatePortMirroringProfiles.json                |
| [workloadNetworksCreatePublicIPSample.ts][workloadnetworkscreatepublicipsample]             | Create a Public IP Block by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_CreatePublicIPs.json                                   |
| [workloadNetworksCreateSegmentsSample.ts][workloadnetworkscreatesegmentssample]             | Create a segment by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_CreateSegments.json                                            |
| [workloadNetworksCreateVMGroupSample.ts][workloadnetworkscreatevmgroupsample]               | Create a vm group by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_CreateVMGroups.json                                           |
| [workloadNetworksDeleteDhcpSample.ts][workloadnetworksdeletedhcpsample]                     | Delete dhcp by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_DeleteDhcpConfigurations.json                                       |
| [workloadNetworksDeleteDnsServiceSample.ts][workloadnetworksdeletednsservicesample]         | Delete a DNS service by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_DeleteDnsServices.json                                     |
| [workloadNetworksDeleteDnsZoneSample.ts][workloadnetworksdeletednszonesample]               | Delete a DNS zone by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_DeleteDnsZones.json                                           |
| [workloadNetworksDeletePortMirroringSample.ts][workloadnetworksdeleteportmirroringsample]   | Delete a port mirroring profile by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_DeletePortMirroringProfiles.json                |
| [workloadNetworksDeletePublicIPSample.ts][workloadnetworksdeletepublicipsample]             | Delete a Public IP Block by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_DeletePublicIPs.json                                   |
| [workloadNetworksDeleteSegmentSample.ts][workloadnetworksdeletesegmentsample]               | Delete a segment by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_DeleteSegments.json                                            |
| [workloadNetworksDeleteVMGroupSample.ts][workloadnetworksdeletevmgroupsample]               | Delete a vm group by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_DeleteVMGroups.json                                           |
| [workloadNetworksGetDhcpSample.ts][workloadnetworksgetdhcpsample]                           | Get dhcp by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_GetDhcpConfigurations.json                                             |
| [workloadNetworksGetDnsServiceSample.ts][workloadnetworksgetdnsservicesample]               | Get a DNS service by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_GetDnsServices.json                                           |
| [workloadNetworksGetDnsZoneSample.ts][workloadnetworksgetdnszonesample]                     | Get a DNS zone by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_GetDnsZones.json                                                 |
| [workloadNetworksGetGatewaySample.ts][workloadnetworksgetgatewaysample]                     | Get a gateway by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_GetGateway.json                                                   |
| [workloadNetworksGetPortMirroringSample.ts][workloadnetworksgetportmirroringsample]         | Get a port mirroring profile by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_GetPortMirroringProfiles.json                      |
| [workloadNetworksGetPublicIPSample.ts][workloadnetworksgetpublicipsample]                   | Get a Public IP Block by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_GetPublicIPs.json                                         |
| [workloadNetworksGetSample.ts][workloadnetworksgetsample]                                   | Get a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_Get.json                                                                             |
| [workloadNetworksGetSegmentSample.ts][workloadnetworksgetsegmentsample]                     | Get a segment by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_GetSegments.json                                                  |
| [workloadNetworksGetVMGroupSample.ts][workloadnetworksgetvmgroupsample]                     | Get a vm group by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_GetVMGroups.json                                                 |
| [workloadNetworksGetVirtualMachineSample.ts][workloadnetworksgetvirtualmachinesample]       | Get a virtual machine by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_GetVirtualMachine.json                                    |
| [workloadNetworksListDhcpSample.ts][workloadnetworkslistdhcpsample]                         | List dhcp in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_ListDhcpConfigurations.json                                                 |
| [workloadNetworksListDnsServicesSample.ts][workloadnetworkslistdnsservicessample]           | List of DNS services in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_ListDnsServices.json                                             |
| [workloadNetworksListDnsZonesSample.ts][workloadnetworkslistdnszonessample]                 | List of DNS zones in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_ListDnsZones.json                                                   |
| [workloadNetworksListGatewaysSample.ts][workloadnetworkslistgatewayssample]                 | List of gateways in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_ListGateways.json                                                    |
| [workloadNetworksListPortMirroringSample.ts][workloadnetworkslistportmirroringsample]       | List of port mirroring profiles in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_ListPortMirroringProfiles.json                        |
| [workloadNetworksListPublicIPsSample.ts][workloadnetworkslistpublicipssample]               | List of Public IP Blocks in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_ListPublicIPs.json                                           |
| [workloadNetworksListSample.ts][workloadnetworkslistsample]                                 | List of workload networks in a private cloud. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_List.json                                                                    |
| [workloadNetworksListSegmentsSample.ts][workloadnetworkslistsegmentssample]                 | List of segments in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_ListSegments.json                                                    |
| [workloadNetworksListVMGroupsSample.ts][workloadnetworkslistvmgroupssample]                 | List of vm groups in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_ListVMGroups.json                                                   |
| [workloadNetworksListVirtualMachinesSample.ts][workloadnetworkslistvirtualmachinessample]   | List of virtual machines in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_ListVirtualMachines.json                                     |
| [workloadNetworksUpdateDhcpSample.ts][workloadnetworksupdatedhcpsample]                     | Create or update dhcp by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_UpdateDhcpConfigurations.json                             |
| [workloadNetworksUpdateDnsServiceSample.ts][workloadnetworksupdatednsservicesample]         | Create or update a DNS service by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_UpdateDnsServices.json                           |
| [workloadNetworksUpdateDnsZoneSample.ts][workloadnetworksupdatednszonesample]               | Create or update a DNS zone by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_UpdateDnsZones.json                                 |
| [workloadNetworksUpdatePortMirroringSample.ts][workloadnetworksupdateportmirroringsample]   | Create or update a port mirroring profile by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_UpdatePortMirroringProfiles.json      |
| [workloadNetworksUpdateSegmentsSample.ts][workloadnetworksupdatesegmentssample]             | Create or update a segment by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_UpdateSegments.json                                  |
| [workloadNetworksUpdateVMGroupSample.ts][workloadnetworksupdatevmgroupsample]               | Create or update a vm group by id in a private cloud workload network. x-ms-original-file: specification/vmware/resource-manager/Microsoft.AVS/stable/2022-05-01/examples/WorkloadNetworks_UpdateVMGroups.json                                 |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/addonsCreateOrUpdateSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx cross-env AVS_SUBSCRIPTION_ID="<avs subscription id>" AVS_RESOURCE_GROUP="<avs resource group>" AVS_SUBSCRIPTION_ID="<avs subscription id>" AVS_RESOURCE_GROUP="<avs resource group>" AVS_SUBSCRIPTION_ID="<avs subscription id>" AVS_RESOURCE_GROUP="<avs resource group>" AVS_SUBSCRIPTION_ID="<avs subscription id>" AVS_RESOURCE_GROUP="<avs resource group>" node dist/addonsCreateOrUpdateSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[addonscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/addonsCreateOrUpdateSample.ts
[addonsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/addonsDeleteSample.ts
[addonsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/addonsGetSample.ts
[addonslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/addonsListSample.ts
[authorizationscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/authorizationsCreateOrUpdateSample.ts
[authorizationsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/authorizationsDeleteSample.ts
[authorizationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/authorizationsGetSample.ts
[authorizationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/authorizationsListSample.ts
[cloudlinkscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/cloudLinksCreateOrUpdateSample.ts
[cloudlinksdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/cloudLinksDeleteSample.ts
[cloudlinksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/cloudLinksGetSample.ts
[cloudlinkslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/cloudLinksListSample.ts
[clusterscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/clustersCreateOrUpdateSample.ts
[clustersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/clustersDeleteSample.ts
[clustersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/clustersGetSample.ts
[clusterslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/clustersListSample.ts
[clusterslistzonessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/clustersListZonesSample.ts
[clustersupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/clustersUpdateSample.ts
[datastorescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/datastoresCreateOrUpdateSample.ts
[datastoresdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/datastoresDeleteSample.ts
[datastoresgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/datastoresGetSample.ts
[datastoreslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/datastoresListSample.ts
[globalreachconnectionscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/globalReachConnectionsCreateOrUpdateSample.ts
[globalreachconnectionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/globalReachConnectionsDeleteSample.ts
[globalreachconnectionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/globalReachConnectionsGetSample.ts
[globalreachconnectionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/globalReachConnectionsListSample.ts
[hcxenterprisesitescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/hcxEnterpriseSitesCreateOrUpdateSample.ts
[hcxenterprisesitesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/hcxEnterpriseSitesDeleteSample.ts
[hcxenterprisesitesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/hcxEnterpriseSitesGetSample.ts
[hcxenterprisesiteslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/hcxEnterpriseSitesListSample.ts
[locationscheckquotaavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/locationsCheckQuotaAvailabilitySample.ts
[locationschecktrialavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/locationsCheckTrialAvailabilitySample.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/operationsListSample.ts
[placementpoliciescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/placementPoliciesCreateOrUpdateSample.ts
[placementpoliciesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/placementPoliciesDeleteSample.ts
[placementpoliciesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/placementPoliciesGetSample.ts
[placementpolicieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/placementPoliciesListSample.ts
[placementpoliciesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/placementPoliciesUpdateSample.ts
[privatecloudscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/privateCloudsCreateOrUpdateSample.ts
[privatecloudsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/privateCloudsDeleteSample.ts
[privatecloudsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/privateCloudsGetSample.ts
[privatecloudslistadmincredentialssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/privateCloudsListAdminCredentialsSample.ts
[privatecloudslistinsubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/privateCloudsListInSubscriptionSample.ts
[privatecloudslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/privateCloudsListSample.ts
[privatecloudsrotatensxtpasswordsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/privateCloudsRotateNsxtPasswordSample.ts
[privatecloudsrotatevcenterpasswordsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/privateCloudsRotateVcenterPasswordSample.ts
[privatecloudsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/privateCloudsUpdateSample.ts
[scriptcmdletsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/scriptCmdletsGetSample.ts
[scriptcmdletslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/scriptCmdletsListSample.ts
[scriptexecutionscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/scriptExecutionsCreateOrUpdateSample.ts
[scriptexecutionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/scriptExecutionsDeleteSample.ts
[scriptexecutionsgetexecutionlogssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/scriptExecutionsGetExecutionLogsSample.ts
[scriptexecutionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/scriptExecutionsGetSample.ts
[scriptexecutionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/scriptExecutionsListSample.ts
[scriptpackagesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/scriptPackagesGetSample.ts
[scriptpackageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/scriptPackagesListSample.ts
[virtualmachinesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/virtualMachinesGetSample.ts
[virtualmachineslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/virtualMachinesListSample.ts
[virtualmachinesrestrictmovementsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/virtualMachinesRestrictMovementSample.ts
[workloadnetworkscreatedhcpsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksCreateDhcpSample.ts
[workloadnetworkscreatednsservicesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksCreateDnsServiceSample.ts
[workloadnetworkscreatednszonesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksCreateDnsZoneSample.ts
[workloadnetworkscreateportmirroringsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksCreatePortMirroringSample.ts
[workloadnetworkscreatepublicipsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksCreatePublicIPSample.ts
[workloadnetworkscreatesegmentssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksCreateSegmentsSample.ts
[workloadnetworkscreatevmgroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksCreateVMGroupSample.ts
[workloadnetworksdeletedhcpsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksDeleteDhcpSample.ts
[workloadnetworksdeletednsservicesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksDeleteDnsServiceSample.ts
[workloadnetworksdeletednszonesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksDeleteDnsZoneSample.ts
[workloadnetworksdeleteportmirroringsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksDeletePortMirroringSample.ts
[workloadnetworksdeletepublicipsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksDeletePublicIPSample.ts
[workloadnetworksdeletesegmentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksDeleteSegmentSample.ts
[workloadnetworksdeletevmgroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksDeleteVMGroupSample.ts
[workloadnetworksgetdhcpsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksGetDhcpSample.ts
[workloadnetworksgetdnsservicesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksGetDnsServiceSample.ts
[workloadnetworksgetdnszonesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksGetDnsZoneSample.ts
[workloadnetworksgetgatewaysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksGetGatewaySample.ts
[workloadnetworksgetportmirroringsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksGetPortMirroringSample.ts
[workloadnetworksgetpublicipsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksGetPublicIPSample.ts
[workloadnetworksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksGetSample.ts
[workloadnetworksgetsegmentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksGetSegmentSample.ts
[workloadnetworksgetvmgroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksGetVMGroupSample.ts
[workloadnetworksgetvirtualmachinesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksGetVirtualMachineSample.ts
[workloadnetworkslistdhcpsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksListDhcpSample.ts
[workloadnetworkslistdnsservicessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksListDnsServicesSample.ts
[workloadnetworkslistdnszonessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksListDnsZonesSample.ts
[workloadnetworkslistgatewayssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksListGatewaysSample.ts
[workloadnetworkslistportmirroringsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksListPortMirroringSample.ts
[workloadnetworkslistpublicipssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksListPublicIPsSample.ts
[workloadnetworkslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksListSample.ts
[workloadnetworkslistsegmentssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksListSegmentsSample.ts
[workloadnetworkslistvmgroupssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksListVMGroupsSample.ts
[workloadnetworkslistvirtualmachinessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksListVirtualMachinesSample.ts
[workloadnetworksupdatedhcpsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksUpdateDhcpSample.ts
[workloadnetworksupdatednsservicesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksUpdateDnsServiceSample.ts
[workloadnetworksupdatednszonesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksUpdateDnsZoneSample.ts
[workloadnetworksupdateportmirroringsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksUpdatePortMirroringSample.ts
[workloadnetworksupdatesegmentssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksUpdateSegmentsSample.ts
[workloadnetworksupdatevmgroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v3/typescript/src/workloadNetworksUpdateVMGroupSample.ts
[apiref]: https://docs.microsoft.com/javascript/api/@azure/arm-avs
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/avs/arm-avs/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
