sdk/avs/arm-avs/samples/v7/typescript/README.md
# @azure/arm-avs client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for @azure/arm-avs in some common scenarios.

| **File Name**                                                                               | **Description**                                                                                                                          |
| ------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------- |
| [addonsCreateOrUpdateSample.ts][addonscreateorupdatesample]                                 | create a Addon x-ms-original-file: 2025-09-01/Addons_CreateOrUpdate_ArcReg.json                                                          |
| [addonsDeleteSample.ts][addonsdeletesample]                                                 | delete a Addon x-ms-original-file: 2025-09-01/Addons_Delete.json                                                                         |
| [addonsGetSample.ts][addonsgetsample]                                                       | get a Addon x-ms-original-file: 2025-09-01/Addons_Get_ArcReg.json                                                                        |
| [addonsListSample.ts][addonslistsample]                                                     | list Addon resources by PrivateCloud x-ms-original-file: 2025-09-01/Addons_List.json                                                     |
| [authorizationsCreateOrUpdateSample.ts][authorizationscreateorupdatesample]                 | create a ExpressRouteAuthorization x-ms-original-file: 2025-09-01/Authorizations_CreateOrUpdate.json                                     |
| [authorizationsDeleteSample.ts][authorizationsdeletesample]                                 | delete a ExpressRouteAuthorization x-ms-original-file: 2025-09-01/Authorizations_Delete.json                                             |
| [authorizationsGetSample.ts][authorizationsgetsample]                                       | get a ExpressRouteAuthorization x-ms-original-file: 2025-09-01/Authorizations_Get.json                                                   |
| [authorizationsListSample.ts][authorizationslistsample]                                     | list ExpressRouteAuthorization resources by PrivateCloud x-ms-original-file: 2025-09-01/Authorizations_List.json                         |
| [cloudLinksCreateOrUpdateSample.ts][cloudlinkscreateorupdatesample]                         | create a CloudLink x-ms-original-file: 2025-09-01/CloudLinks_CreateOrUpdate.json                                                         |
| [cloudLinksDeleteSample.ts][cloudlinksdeletesample]                                         | delete a CloudLink x-ms-original-file: 2025-09-01/CloudLinks_Delete.json                                                                 |
| [cloudLinksGetSample.ts][cloudlinksgetsample]                                               | get a CloudLink x-ms-original-file: 2025-09-01/CloudLinks_Get.json                                                                       |
| [cloudLinksListSample.ts][cloudlinkslistsample]                                             | list CloudLink resources by PrivateCloud x-ms-original-file: 2025-09-01/CloudLinks_List.json                                             |
| [clustersCreateOrUpdateSample.ts][clusterscreateorupdatesample]                             | create a Cluster x-ms-original-file: 2025-09-01/Clusters_CreateOrUpdate.json                                                             |
| [clustersDeleteSample.ts][clustersdeletesample]                                             | delete a Cluster x-ms-original-file: 2025-09-01/Clusters_Delete.json                                                                     |
| [clustersGetSample.ts][clustersgetsample]                                                   | get a Cluster x-ms-original-file: 2025-09-01/Clusters_Get.json                                                                           |
| [clustersListSample.ts][clusterslistsample]                                                 | list Cluster resources by PrivateCloud x-ms-original-file: 2025-09-01/Clusters_List.json                                                 |
| [clustersListZonesSample.ts][clusterslistzonessample]                                       | list hosts by zone in a cluster x-ms-original-file: 2025-09-01/Clusters_ListZones.json                                                   |
| [clustersUpdateSample.ts][clustersupdatesample]                                             | update a Cluster x-ms-original-file: 2025-09-01/Clusters_Update.json                                                                     |
| [datastoresCreateOrUpdateSample.ts][datastorescreateorupdatesample]                         | create a Datastore x-ms-original-file: 2025-09-01/Datastores_CreateOrUpdate.json                                                         |
| [datastoresDeleteSample.ts][datastoresdeletesample]                                         | delete a Datastore x-ms-original-file: 2025-09-01/Datastores_Delete.json                                                                 |
| [datastoresGetSample.ts][datastoresgetsample]                                               | get a Datastore x-ms-original-file: 2025-09-01/Datastores_Get.json                                                                       |
| [datastoresListSample.ts][datastoreslistsample]                                             | list Datastore resources by Cluster x-ms-original-file: 2025-09-01/Datastores_List.json                                                  |
| [globalReachConnectionsCreateOrUpdateSample.ts][globalreachconnectionscreateorupdatesample] | create a GlobalReachConnection x-ms-original-file: 2025-09-01/GlobalReachConnections_CreateOrUpdate.json                                 |
| [globalReachConnectionsDeleteSample.ts][globalreachconnectionsdeletesample]                 | delete a GlobalReachConnection x-ms-original-file: 2025-09-01/GlobalReachConnections_Delete.json                                         |
| [globalReachConnectionsGetSample.ts][globalreachconnectionsgetsample]                       | get a GlobalReachConnection x-ms-original-file: 2025-09-01/GlobalReachConnections_Get.json                                               |
| [globalReachConnectionsListSample.ts][globalreachconnectionslistsample]                     | list GlobalReachConnection resources by PrivateCloud x-ms-original-file: 2025-09-01/GlobalReachConnections_List.json                     |
| [hcxEnterpriseSitesCreateOrUpdateSample.ts][hcxenterprisesitescreateorupdatesample]         | create a HcxEnterpriseSite x-ms-original-file: 2025-09-01/HcxEnterpriseSites_CreateOrUpdate.json                                         |
| [hcxEnterpriseSitesDeleteSample.ts][hcxenterprisesitesdeletesample]                         | delete a HcxEnterpriseSite x-ms-original-file: 2025-09-01/HcxEnterpriseSites_Delete.json                                                 |
| [hcxEnterpriseSitesGetSample.ts][hcxenterprisesitesgetsample]                               | get a HcxEnterpriseSite x-ms-original-file: 2025-09-01/HcxEnterpriseSites_Get.json                                                       |
| [hcxEnterpriseSitesListSample.ts][hcxenterprisesiteslistsample]                             | list HcxEnterpriseSite resources by PrivateCloud x-ms-original-file: 2025-09-01/HcxEnterpriseSites_List.json                             |
| [hostsGetSample.ts][hostsgetsample]                                                         | get a Host x-ms-original-file: 2025-09-01/Hosts_Get.json                                                                                 |
| [hostsListSample.ts][hostslistsample]                                                       | list Host resources by Cluster x-ms-original-file: 2025-09-01/Hosts_List.json                                                            |
| [iscsiPathsCreateOrUpdateSample.ts][iscsipathscreateorupdatesample]                         | create a IscsiPath x-ms-original-file: 2025-09-01/IscsiPaths_CreateOrUpdate.json                                                         |
| [iscsiPathsDeleteSample.ts][iscsipathsdeletesample]                                         | delete a IscsiPath x-ms-original-file: 2025-09-01/IscsiPaths_Delete.json                                                                 |
| [iscsiPathsGetSample.ts][iscsipathsgetsample]                                               | get a IscsiPath x-ms-original-file: 2025-09-01/IscsiPaths_Get.json                                                                       |
| [iscsiPathsListByPrivateCloudSample.ts][iscsipathslistbyprivatecloudsample]                 | list IscsiPath resources by PrivateCloud x-ms-original-file: 2025-09-01/IscsiPaths_List.json                                             |
| [licensesCreateOrUpdateSample.ts][licensescreateorupdatesample]                             | create a License x-ms-original-file: 2025-09-01/Licenses_CreateOrUpdate.json                                                             |
| [licensesDeleteSample.ts][licensesdeletesample]                                             | delete a License x-ms-original-file: 2025-09-01/Licenses_Delete.json                                                                     |
| [licensesGetPropertiesSample.ts][licensesgetpropertiessample]                               | just like ArmResourceActionSync, but with no request body. x-ms-original-file: 2025-09-01/Licenses_GetProperties.json                    |
| [licensesGetSample.ts][licensesgetsample]                                                   | get a License x-ms-original-file: 2025-09-01/Licenses_Get.json                                                                           |
| [licensesListSample.ts][licenseslistsample]                                                 | list License resources by PrivateCloud x-ms-original-file: 2025-09-01/Licenses_List.json                                                 |
| [locationsCheckQuotaAvailabilitySample.ts][locationscheckquotaavailabilitysample]           | return quota for subscription by region x-ms-original-file: 2025-09-01/Locations_CheckQuotaAvailability.json                             |
| [locationsCheckTrialAvailabilitySample.ts][locationschecktrialavailabilitysample]           | return trial status for subscription by region x-ms-original-file: 2025-09-01/Locations_CheckTrialAvailability.json                      |
| [maintenancesGetSample.ts][maintenancesgetsample]                                           | get a Maintenance x-ms-original-file: 2025-09-01/Maintenances_Get.json                                                                   |
| [maintenancesInitiateChecksSample.ts][maintenancesinitiatecheckssample]                     | initiate maintenance readiness checks x-ms-original-file: 2025-09-01/Maintenances_InitiateChecks.json                                    |
| [maintenancesListSample.ts][maintenanceslistsample]                                         | list Maintenance resources by subscription ID x-ms-original-file: 2025-09-01/Maintenances_List.json                                      |
| [maintenancesRescheduleSample.ts][maintenancesreschedulesample]                             | reschedule a maintenance x-ms-original-file: 2025-09-01/Maintenances_Reschedule.json                                                     |
| [maintenancesScheduleSample.ts][maintenancesschedulesample]                                 | schedule a maintenance x-ms-original-file: 2025-09-01/Maintenances_Schedule.json                                                         |
| [operationsListSample.ts][operationslistsample]                                             | list the operations for the provider x-ms-original-file: 2025-09-01/Operations_List.json                                                 |
| [placementPoliciesCreateOrUpdateSample.ts][placementpoliciescreateorupdatesample]           | create a PlacementPolicy x-ms-original-file: 2025-09-01/PlacementPolicies_CreateOrUpdate.json                                            |
| [placementPoliciesDeleteSample.ts][placementpoliciesdeletesample]                           | delete a PlacementPolicy x-ms-original-file: 2025-09-01/PlacementPolicies_Delete.json                                                    |
| [placementPoliciesGetSample.ts][placementpoliciesgetsample]                                 | get a PlacementPolicy x-ms-original-file: 2025-09-01/PlacementPolicies_Get.json                                                          |
| [placementPoliciesListSample.ts][placementpolicieslistsample]                               | list PlacementPolicy resources by Cluster x-ms-original-file: 2025-09-01/PlacementPolicies_List.json                                     |
| [placementPoliciesUpdateSample.ts][placementpoliciesupdatesample]                           | update a PlacementPolicy x-ms-original-file: 2025-09-01/PlacementPolicies_Update.json                                                    |
| [privateCloudsCreateOrUpdateSample.ts][privatecloudscreateorupdatesample]                   | create a PrivateCloud x-ms-original-file: 2025-09-01/PrivateClouds_CreateOrUpdate.json                                                   |
| [privateCloudsDeleteSample.ts][privatecloudsdeletesample]                                   | delete a PrivateCloud x-ms-original-file: 2025-09-01/PrivateClouds_Delete.json                                                           |
| [privateCloudsGetSample.ts][privatecloudsgetsample]                                         | get a PrivateCloud x-ms-original-file: 2025-09-01/PrivateClouds_Get.json                                                                 |
| [privateCloudsGetVcfLicenseSample.ts][privatecloudsgetvcflicensesample]                     | get the license for the private cloud x-ms-original-file: 2025-09-01/PrivateClouds_GetVcfLicense.json                                    |
| [privateCloudsListAdminCredentialsSample.ts][privatecloudslistadmincredentialssample]       | list the admin credentials for the private cloud x-ms-original-file: 2025-09-01/PrivateClouds_ListAdminCredentials.json                  |
| [privateCloudsListInSubscriptionSample.ts][privatecloudslistinsubscriptionsample]           | list PrivateCloud resources by subscription ID x-ms-original-file: 2025-09-01/PrivateClouds_ListInSubscription.json                      |
| [privateCloudsListSample.ts][privatecloudslistsample]                                       | list PrivateCloud resources by resource group x-ms-original-file: 2025-09-01/PrivateClouds_List.json                                     |
| [privateCloudsRotateNsxtPasswordSample.ts][privatecloudsrotatensxtpasswordsample]           | rotate the NSX-T Manager password x-ms-original-file: 2025-09-01/PrivateClouds_RotateNsxtPassword.json                                   |
| [privateCloudsRotateVcenterPasswordSample.ts][privatecloudsrotatevcenterpasswordsample]     | rotate the vCenter password x-ms-original-file: 2025-09-01/PrivateClouds_RotateVcenterPassword.json                                      |
| [privateCloudsUpdateSample.ts][privatecloudsupdatesample]                                   | update a PrivateCloud x-ms-original-file: 2025-09-01/PrivateClouds_Update.json                                                           |
| [provisionedNetworksGetSample.ts][provisionednetworksgetsample]                             | get a ProvisionedNetwork x-ms-original-file: 2025-09-01/ProvisionedNetworks_Get.json                                                     |
| [provisionedNetworksListSample.ts][provisionednetworkslistsample]                           | list ProvisionedNetwork resources by PrivateCloud x-ms-original-file: 2025-09-01/ProvisionedNetworks_List.json                           |
| [pureStoragePoliciesCreateOrUpdateSample.ts][purestoragepoliciescreateorupdatesample]       | create a PureStoragePolicy x-ms-original-file: 2025-09-01/PureStoragePolicies_CreateOrUpdate.json                                        |
| [pureStoragePoliciesDeleteSample.ts][purestoragepoliciesdeletesample]                       | delete a PureStoragePolicy x-ms-original-file: 2025-09-01/PureStoragePolicies_Delete.json                                                |
| [pureStoragePoliciesGetSample.ts][purestoragepoliciesgetsample]                             | get a PureStoragePolicy x-ms-original-file: 2025-09-01/PureStoragePolicies_Get.json                                                      |
| [pureStoragePoliciesListSample.ts][purestoragepolicieslistsample]                           | list PureStoragePolicy resources by PrivateCloud x-ms-original-file: 2025-09-01/PureStoragePolicies_List.json                            |
| [scriptCmdletsGetSample.ts][scriptcmdletsgetsample]                                         | get a ScriptCmdlet x-ms-original-file: 2025-09-01/ScriptCmdlets_Get.json                                                                 |
| [scriptCmdletsListSample.ts][scriptcmdletslistsample]                                       | list ScriptCmdlet resources by ScriptPackage x-ms-original-file: 2025-09-01/ScriptCmdlets_List.json                                      |
| [scriptExecutionsCreateOrUpdateSample.ts][scriptexecutionscreateorupdatesample]             | create a ScriptExecution x-ms-original-file: 2025-09-01/ScriptExecutions_CreateOrUpdate.json                                             |
| [scriptExecutionsDeleteSample.ts][scriptexecutionsdeletesample]                             | delete a ScriptExecution x-ms-original-file: 2025-09-01/ScriptExecutions_Delete.json                                                     |
| [scriptExecutionsGetExecutionLogsSample.ts][scriptexecutionsgetexecutionlogssample]         | return the logs for a script execution resource x-ms-original-file: 2025-09-01/ScriptExecutions_GetExecutionLogs.json                    |
| [scriptExecutionsGetSample.ts][scriptexecutionsgetsample]                                   | get a ScriptExecution x-ms-original-file: 2025-09-01/ScriptExecutions_Get.json                                                           |
| [scriptExecutionsListSample.ts][scriptexecutionslistsample]                                 | list ScriptExecution resources by PrivateCloud x-ms-original-file: 2025-09-01/ScriptExecutions_List.json                                 |
| [scriptPackagesGetSample.ts][scriptpackagesgetsample]                                       | get a ScriptPackage x-ms-original-file: 2025-09-01/ScriptPackages_Get.json                                                               |
| [scriptPackagesListSample.ts][scriptpackageslistsample]                                     | list ScriptPackage resources by PrivateCloud x-ms-original-file: 2025-09-01/ScriptPackages_List.json                                     |
| [serviceComponentsCheckAvailabilitySample.ts][servicecomponentscheckavailabilitysample]     | return service component availability x-ms-original-file: 2025-09-01/ServiceComponents_CheckAvailability.json                            |
| [skusListSample.ts][skuslistsample]                                                         | a list of SKUs. x-ms-original-file: 2025-09-01/Skus_List.json                                                                            |
| [virtualMachinesGetSample.ts][virtualmachinesgetsample]                                     | get a VirtualMachine x-ms-original-file: 2025-09-01/VirtualMachines_Get.json                                                             |
| [virtualMachinesListSample.ts][virtualmachineslistsample]                                   | list VirtualMachine resources by Cluster x-ms-original-file: 2025-09-01/VirtualMachines_List.json                                        |
| [virtualMachinesRestrictMovementSample.ts][virtualmachinesrestrictmovementsample]           | enable or disable DRS-driven VM movement restriction x-ms-original-file: 2025-09-01/VirtualMachines_RestrictMovement.json                |
| [workloadNetworksCreateDhcpSample.ts][workloadnetworkscreatedhcpsample]                     | create a WorkloadNetworkDhcp x-ms-original-file: 2025-09-01/WorkloadNetworks_CreateDhcp.json                                             |
| [workloadNetworksCreateDnsServiceSample.ts][workloadnetworkscreatednsservicesample]         | create a WorkloadNetworkDnsService x-ms-original-file: 2025-09-01/WorkloadNetworks_CreateDnsService.json                                 |
| [workloadNetworksCreateDnsZoneSample.ts][workloadnetworkscreatednszonesample]               | create a WorkloadNetworkDnsZone x-ms-original-file: 2025-09-01/WorkloadNetworks_CreateDnsZone.json                                       |
| [workloadNetworksCreatePortMirroringSample.ts][workloadnetworkscreateportmirroringsample]   | create a WorkloadNetworkPortMirroring x-ms-original-file: 2025-09-01/WorkloadNetworks_CreatePortMirroring.json                           |
| [workloadNetworksCreatePublicIPSample.ts][workloadnetworkscreatepublicipsample]             | create a WorkloadNetworkPublicIP x-ms-original-file: 2025-09-01/WorkloadNetworks_CreatePublicIP.json                                     |
| [workloadNetworksCreateSegmentsSample.ts][workloadnetworkscreatesegmentssample]             | create a WorkloadNetworkSegment x-ms-original-file: 2025-09-01/WorkloadNetworks_CreateSegments.json                                      |
| [workloadNetworksCreateVMGroupSample.ts][workloadnetworkscreatevmgroupsample]               | create a WorkloadNetworkVMGroup x-ms-original-file: 2025-09-01/WorkloadNetworks_CreateVMGroup.json                                       |
| [workloadNetworksDeleteDhcpSample.ts][workloadnetworksdeletedhcpsample]                     | delete a WorkloadNetworkDhcp x-ms-original-file: 2025-09-01/WorkloadNetworks_DeleteDhcp.json                                             |
| [workloadNetworksDeleteDnsServiceSample.ts][workloadnetworksdeletednsservicesample]         | delete a WorkloadNetworkDnsService x-ms-original-file: 2025-09-01/WorkloadNetworks_DeleteDnsService.json                                 |
| [workloadNetworksDeleteDnsZoneSample.ts][workloadnetworksdeletednszonesample]               | delete a WorkloadNetworkDnsZone x-ms-original-file: 2025-09-01/WorkloadNetworks_DeleteDnsZone.json                                       |
| [workloadNetworksDeletePortMirroringSample.ts][workloadnetworksdeleteportmirroringsample]   | delete a WorkloadNetworkPortMirroring x-ms-original-file: 2025-09-01/WorkloadNetworks_DeletePortMirroring.json                           |
| [workloadNetworksDeletePublicIPSample.ts][workloadnetworksdeletepublicipsample]             | delete a WorkloadNetworkPublicIP x-ms-original-file: 2025-09-01/WorkloadNetworks_DeletePublicIP.json                                     |
| [workloadNetworksDeleteSegmentSample.ts][workloadnetworksdeletesegmentsample]               | delete a WorkloadNetworkSegment x-ms-original-file: 2025-09-01/WorkloadNetworks_DeleteSegment.json                                       |
| [workloadNetworksDeleteVMGroupSample.ts][workloadnetworksdeletevmgroupsample]               | delete a WorkloadNetworkVMGroup x-ms-original-file: 2025-09-01/WorkloadNetworks_DeleteVMGroup.json                                       |
| [workloadNetworksGetDhcpSample.ts][workloadnetworksgetdhcpsample]                           | get a WorkloadNetworkDhcp x-ms-original-file: 2025-09-01/WorkloadNetworks_GetDhcp.json                                                   |
| [workloadNetworksGetDnsServiceSample.ts][workloadnetworksgetdnsservicesample]               | get a WorkloadNetworkDnsService x-ms-original-file: 2025-09-01/WorkloadNetworks_GetDnsService.json                                       |
| [workloadNetworksGetDnsZoneSample.ts][workloadnetworksgetdnszonesample]                     | get a WorkloadNetworkDnsZone x-ms-original-file: 2025-09-01/WorkloadNetworks_GetDnsZone.json                                             |
| [workloadNetworksGetGatewaySample.ts][workloadnetworksgetgatewaysample]                     | get a WorkloadNetworkGateway x-ms-original-file: 2025-09-01/WorkloadNetworks_GetGateway.json                                             |
| [workloadNetworksGetPortMirroringSample.ts][workloadnetworksgetportmirroringsample]         | get a WorkloadNetworkPortMirroring x-ms-original-file: 2025-09-01/WorkloadNetworks_GetPortMirroring.json                                 |
| [workloadNetworksGetPublicIPSample.ts][workloadnetworksgetpublicipsample]                   | get a WorkloadNetworkPublicIP x-ms-original-file: 2025-09-01/WorkloadNetworks_GetPublicIP.json                                           |
| [workloadNetworksGetSample.ts][workloadnetworksgetsample]                                   | get a WorkloadNetwork x-ms-original-file: 2025-09-01/WorkloadNetworks_Get.json                                                           |
| [workloadNetworksGetSegmentSample.ts][workloadnetworksgetsegmentsample]                     | get a WorkloadNetworkSegment x-ms-original-file: 2025-09-01/WorkloadNetworks_GetSegment.json                                             |
| [workloadNetworksGetVMGroupSample.ts][workloadnetworksgetvmgroupsample]                     | get a WorkloadNetworkVMGroup x-ms-original-file: 2025-09-01/WorkloadNetworks_GetVMGroup.json                                             |
| [workloadNetworksGetVirtualMachineSample.ts][workloadnetworksgetvirtualmachinesample]       | get a WorkloadNetworkVirtualMachine x-ms-original-file: 2025-09-01/WorkloadNetworks_GetVirtualMachine.json                               |
| [workloadNetworksListDhcpSample.ts][workloadnetworkslistdhcpsample]                         | list WorkloadNetworkDhcp resources by WorkloadNetwork x-ms-original-file: 2025-09-01/WorkloadNetworks_ListDhcp.json                      |
| [workloadNetworksListDnsServicesSample.ts][workloadnetworkslistdnsservicessample]           | list WorkloadNetworkDnsService resources by WorkloadNetwork x-ms-original-file: 2025-09-01/WorkloadNetworks_ListDnsServices.json         |
| [workloadNetworksListDnsZonesSample.ts][workloadnetworkslistdnszonessample]                 | list WorkloadNetworkDnsZone resources by WorkloadNetwork x-ms-original-file: 2025-09-01/WorkloadNetworks_ListDnsZones.json               |
| [workloadNetworksListGatewaysSample.ts][workloadnetworkslistgatewayssample]                 | list WorkloadNetworkGateway resources by WorkloadNetwork x-ms-original-file: 2025-09-01/WorkloadNetworks_ListGateways.json               |
| [workloadNetworksListPortMirroringSample.ts][workloadnetworkslistportmirroringsample]       | list WorkloadNetworkPortMirroring resources by WorkloadNetwork x-ms-original-file: 2025-09-01/WorkloadNetworks_ListPortMirroring.json    |
| [workloadNetworksListPublicIPsSample.ts][workloadnetworkslistpublicipssample]               | list WorkloadNetworkPublicIP resources by WorkloadNetwork x-ms-original-file: 2025-09-01/WorkloadNetworks_ListPublicIPs.json             |
| [workloadNetworksListSample.ts][workloadnetworkslistsample]                                 | list WorkloadNetwork resources by PrivateCloud x-ms-original-file: 2025-09-01/WorkloadNetworks_List.json                                 |
| [workloadNetworksListSegmentsSample.ts][workloadnetworkslistsegmentssample]                 | list WorkloadNetworkSegment resources by WorkloadNetwork x-ms-original-file: 2025-09-01/WorkloadNetworks_ListSegments.json               |
| [workloadNetworksListVMGroupsSample.ts][workloadnetworkslistvmgroupssample]                 | list WorkloadNetworkVMGroup resources by WorkloadNetwork x-ms-original-file: 2025-09-01/WorkloadNetworks_ListVMGroups.json               |
| [workloadNetworksListVirtualMachinesSample.ts][workloadnetworkslistvirtualmachinessample]   | list WorkloadNetworkVirtualMachine resources by WorkloadNetwork x-ms-original-file: 2025-09-01/WorkloadNetworks_ListVirtualMachines.json |
| [workloadNetworksUpdateDhcpSample.ts][workloadnetworksupdatedhcpsample]                     | update a WorkloadNetworkDhcp x-ms-original-file: 2025-09-01/WorkloadNetworks_UpdateDhcp.json                                             |
| [workloadNetworksUpdateDnsServiceSample.ts][workloadnetworksupdatednsservicesample]         | update a WorkloadNetworkDnsService x-ms-original-file: 2025-09-01/WorkloadNetworks_UpdateDnsService.json                                 |
| [workloadNetworksUpdateDnsZoneSample.ts][workloadnetworksupdatednszonesample]               | update a WorkloadNetworkDnsZone x-ms-original-file: 2025-09-01/WorkloadNetworks_UpdateDnsZone.json                                       |
| [workloadNetworksUpdatePortMirroringSample.ts][workloadnetworksupdateportmirroringsample]   | update a WorkloadNetworkPortMirroring x-ms-original-file: 2025-09-01/WorkloadNetworks_UpdatePortMirroring.json                           |
| [workloadNetworksUpdateSegmentsSample.ts][workloadnetworksupdatesegmentssample]             | update a WorkloadNetworkSegment x-ms-original-file: 2025-09-01/WorkloadNetworks_UpdateSegments.json                                      |
| [workloadNetworksUpdateVMGroupSample.ts][workloadnetworksupdatevmgroupsample]               | update a WorkloadNetworkVMGroup x-ms-original-file: 2025-09-01/WorkloadNetworks_UpdateVMGroup.json                                       |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/addonsCreateOrUpdateSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
cross-env  node dist/addonsCreateOrUpdateSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[addonscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/addonsCreateOrUpdateSample.ts
[addonsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/addonsDeleteSample.ts
[addonsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/addonsGetSample.ts
[addonslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/addonsListSample.ts
[authorizationscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/authorizationsCreateOrUpdateSample.ts
[authorizationsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/authorizationsDeleteSample.ts
[authorizationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/authorizationsGetSample.ts
[authorizationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/authorizationsListSample.ts
[cloudlinkscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/cloudLinksCreateOrUpdateSample.ts
[cloudlinksdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/cloudLinksDeleteSample.ts
[cloudlinksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/cloudLinksGetSample.ts
[cloudlinkslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/cloudLinksListSample.ts
[clusterscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/clustersCreateOrUpdateSample.ts
[clustersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/clustersDeleteSample.ts
[clustersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/clustersGetSample.ts
[clusterslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/clustersListSample.ts
[clusterslistzonessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/clustersListZonesSample.ts
[clustersupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/clustersUpdateSample.ts
[datastorescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/datastoresCreateOrUpdateSample.ts
[datastoresdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/datastoresDeleteSample.ts
[datastoresgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/datastoresGetSample.ts
[datastoreslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/datastoresListSample.ts
[globalreachconnectionscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/globalReachConnectionsCreateOrUpdateSample.ts
[globalreachconnectionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/globalReachConnectionsDeleteSample.ts
[globalreachconnectionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/globalReachConnectionsGetSample.ts
[globalreachconnectionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/globalReachConnectionsListSample.ts
[hcxenterprisesitescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/hcxEnterpriseSitesCreateOrUpdateSample.ts
[hcxenterprisesitesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/hcxEnterpriseSitesDeleteSample.ts
[hcxenterprisesitesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/hcxEnterpriseSitesGetSample.ts
[hcxenterprisesiteslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/hcxEnterpriseSitesListSample.ts
[hostsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/hostsGetSample.ts
[hostslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/hostsListSample.ts
[iscsipathscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/iscsiPathsCreateOrUpdateSample.ts
[iscsipathsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/iscsiPathsDeleteSample.ts
[iscsipathsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/iscsiPathsGetSample.ts
[iscsipathslistbyprivatecloudsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/iscsiPathsListByPrivateCloudSample.ts
[licensescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/licensesCreateOrUpdateSample.ts
[licensesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/licensesDeleteSample.ts
[licensesgetpropertiessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/licensesGetPropertiesSample.ts
[licensesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/licensesGetSample.ts
[licenseslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/licensesListSample.ts
[locationscheckquotaavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/locationsCheckQuotaAvailabilitySample.ts
[locationschecktrialavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/locationsCheckTrialAvailabilitySample.ts
[maintenancesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/maintenancesGetSample.ts
[maintenancesinitiatecheckssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/maintenancesInitiateChecksSample.ts
[maintenanceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/maintenancesListSample.ts
[maintenancesreschedulesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/maintenancesRescheduleSample.ts
[maintenancesschedulesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/maintenancesScheduleSample.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/operationsListSample.ts
[placementpoliciescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/placementPoliciesCreateOrUpdateSample.ts
[placementpoliciesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/placementPoliciesDeleteSample.ts
[placementpoliciesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/placementPoliciesGetSample.ts
[placementpolicieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/placementPoliciesListSample.ts
[placementpoliciesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/placementPoliciesUpdateSample.ts
[privatecloudscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/privateCloudsCreateOrUpdateSample.ts
[privatecloudsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/privateCloudsDeleteSample.ts
[privatecloudsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/privateCloudsGetSample.ts
[privatecloudsgetvcflicensesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/privateCloudsGetVcfLicenseSample.ts
[privatecloudslistadmincredentialssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/privateCloudsListAdminCredentialsSample.ts
[privatecloudslistinsubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/privateCloudsListInSubscriptionSample.ts
[privatecloudslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/privateCloudsListSample.ts
[privatecloudsrotatensxtpasswordsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/privateCloudsRotateNsxtPasswordSample.ts
[privatecloudsrotatevcenterpasswordsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/privateCloudsRotateVcenterPasswordSample.ts
[privatecloudsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/privateCloudsUpdateSample.ts
[provisionednetworksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/provisionedNetworksGetSample.ts
[provisionednetworkslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/provisionedNetworksListSample.ts
[purestoragepoliciescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/pureStoragePoliciesCreateOrUpdateSample.ts
[purestoragepoliciesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/pureStoragePoliciesDeleteSample.ts
[purestoragepoliciesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/pureStoragePoliciesGetSample.ts
[purestoragepolicieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/pureStoragePoliciesListSample.ts
[scriptcmdletsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/scriptCmdletsGetSample.ts
[scriptcmdletslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/scriptCmdletsListSample.ts
[scriptexecutionscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/scriptExecutionsCreateOrUpdateSample.ts
[scriptexecutionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/scriptExecutionsDeleteSample.ts
[scriptexecutionsgetexecutionlogssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/scriptExecutionsGetExecutionLogsSample.ts
[scriptexecutionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/scriptExecutionsGetSample.ts
[scriptexecutionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/scriptExecutionsListSample.ts
[scriptpackagesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/scriptPackagesGetSample.ts
[scriptpackageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/scriptPackagesListSample.ts
[servicecomponentscheckavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/serviceComponentsCheckAvailabilitySample.ts
[skuslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/skusListSample.ts
[virtualmachinesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/virtualMachinesGetSample.ts
[virtualmachineslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/virtualMachinesListSample.ts
[virtualmachinesrestrictmovementsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/virtualMachinesRestrictMovementSample.ts
[workloadnetworkscreatedhcpsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksCreateDhcpSample.ts
[workloadnetworkscreatednsservicesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksCreateDnsServiceSample.ts
[workloadnetworkscreatednszonesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksCreateDnsZoneSample.ts
[workloadnetworkscreateportmirroringsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksCreatePortMirroringSample.ts
[workloadnetworkscreatepublicipsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksCreatePublicIPSample.ts
[workloadnetworkscreatesegmentssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksCreateSegmentsSample.ts
[workloadnetworkscreatevmgroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksCreateVMGroupSample.ts
[workloadnetworksdeletedhcpsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksDeleteDhcpSample.ts
[workloadnetworksdeletednsservicesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksDeleteDnsServiceSample.ts
[workloadnetworksdeletednszonesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksDeleteDnsZoneSample.ts
[workloadnetworksdeleteportmirroringsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksDeletePortMirroringSample.ts
[workloadnetworksdeletepublicipsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksDeletePublicIPSample.ts
[workloadnetworksdeletesegmentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksDeleteSegmentSample.ts
[workloadnetworksdeletevmgroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksDeleteVMGroupSample.ts
[workloadnetworksgetdhcpsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksGetDhcpSample.ts
[workloadnetworksgetdnsservicesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksGetDnsServiceSample.ts
[workloadnetworksgetdnszonesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksGetDnsZoneSample.ts
[workloadnetworksgetgatewaysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksGetGatewaySample.ts
[workloadnetworksgetportmirroringsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksGetPortMirroringSample.ts
[workloadnetworksgetpublicipsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksGetPublicIPSample.ts
[workloadnetworksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksGetSample.ts
[workloadnetworksgetsegmentsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksGetSegmentSample.ts
[workloadnetworksgetvmgroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksGetVMGroupSample.ts
[workloadnetworksgetvirtualmachinesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksGetVirtualMachineSample.ts
[workloadnetworkslistdhcpsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksListDhcpSample.ts
[workloadnetworkslistdnsservicessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksListDnsServicesSample.ts
[workloadnetworkslistdnszonessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksListDnsZonesSample.ts
[workloadnetworkslistgatewayssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksListGatewaysSample.ts
[workloadnetworkslistportmirroringsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksListPortMirroringSample.ts
[workloadnetworkslistpublicipssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksListPublicIPsSample.ts
[workloadnetworkslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksListSample.ts
[workloadnetworkslistsegmentssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksListSegmentsSample.ts
[workloadnetworkslistvmgroupssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksListVMGroupsSample.ts
[workloadnetworkslistvirtualmachinessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksListVirtualMachinesSample.ts
[workloadnetworksupdatedhcpsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksUpdateDhcpSample.ts
[workloadnetworksupdatednsservicesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksUpdateDnsServiceSample.ts
[workloadnetworksupdatednszonesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksUpdateDnsZoneSample.ts
[workloadnetworksupdateportmirroringsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksUpdatePortMirroringSample.ts
[workloadnetworksupdatesegmentssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksUpdateSegmentsSample.ts
[workloadnetworksupdatevmgroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/avs/arm-avs/samples/v7/typescript/src/workloadNetworksUpdateVMGroupSample.ts
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-avs?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/avs/arm-avs/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
